--- a/index.html
+++ b/index.html
@@ -26,18 +26,55 @@
  <!-- Principal -->
  <div data-role="page" id="principal" >   
   <div data-role="header">
-    <h1>Encabezado</h1>
+    <h1>El Ahorcado</h1>
   </div>
 
   <div data-role="main" class="ui-content">
-    <a href="#" class="ui-btn ui-btn-corner-all ui-icon-alert ui-btn-icon-right">click</a>
+    
+  
+  <div align="center">
+   <div data-role="controlgroup" style="width:65%" >
+    <a href="#jugo" class="ui-btn ui-btn-corner-all ui-icon-check ui-btn-icon-right"> Jugar</a>
+    <a href="#Opciones" class="ui-btn ui-btn-corner-all ui-icon-gear ui-btn-icon-right"> Opciones </a>
   </div>
-
-  <div data-role="footer">
-    <h1>Pie</h1>
-  </div>
- </div>  
+</div>
+ 
+ </div> 
+ </div> 
  <!-- Principal -->
 
+<!-- Opciones -->
+ <div data-role="page" id="Opciones" >   
+  <div data-role="header">
+    <h1>Opciones</h1>
+    <a href="#principal" class="ui-btn-left" data-icon="home"> Inicio </a>
+  </div>
+
+  <div data-role="main" class="ui-content">
+   <div align="center">
+   <div data-role="controlgroup" style="width:65%" >
+    <a href="#" id="btn-sonido" class="ui-btn ui-btn-corner-all ui-icon-audio ui-btn-icon-right" > SONAR</a>
+    <a href="#" id="btn-vibrar" class="ui-btn ui-btn-corner-all ui-icon-power ui-btn-icon right"> Vibrar</a>
+
+    </div>
+   </div> 
+   </div> 
+   
+ <!-- Opciones -->
+ 
+ <!-- Juejo -->
+ <div data-role="page" id="juego" >   
+  <div data-role="header">
+    <h1>El Ahorcado</h1>
+  </div>
+
+  <div data-role="main" class="ui-content">
+    <a href="#" class="ui-btn ui-btn-corner-all ui-icon-alert ui-btn-icon-right">Jugar</a>
+    <a href="#" class="ui-btn ui-btn-corner-all ui-icon-alert ui-btn-icon-right">Opciones</a>
+  </div>
+
+  
+ </div>  
+ <!-- Principal -->
  </body>
 </html> 
